--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
         "start": "ts-node-dev src/index.ts"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/connect-redis": "^0.0.16",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.9",
+        "@types/express-session": "^1.17.3",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/pg": "^7.14.7",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "connect-redis": "^5.0.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "ioredis": "^4.19.4",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.5.1"
     }
 }
