--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/connect-redis": "^0.0.16",
+        "@types/cors": "^2.8.9",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.9",
         "@types/express-session": "^1.17.3",
@@ -22,6 +23,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "connect-redis": "^5.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
