--- a/.env.docker
+++ b/.env.docker
@@ -6,6 +6,6 @@ JWT_SECRET=bigsecret
 PORT=8080
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=stock_management
