--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "stock-management",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "src/index.ts",
     "repository": "git@github.com:emreturgutce/stock-management.git",
     "author": "emreturgutce <emrebursalee@gmail.com>",
     "license": "MIT",
@@ -17,8 +17,10 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.9",
         "@types/express-session": "^1.17.3",
+        "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/pg": "^7.14.7",
+        "@types/uuid": "^8.3.0",
         "cross-env": "^7.0.3",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.3"
@@ -30,8 +32,10 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
+        "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
-        "pg": "^8.5.1"
+        "pg": "^8.5.1",
+        "uuid": "^8.3.2"
     }
 }
