--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "aws-sdk": "^2.820.0",
         "bcryptjs": "^2.4.3",
         "connect-redis": "^5.0.0",
         "cors": "^2.8.5",
