--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/express-session": "^1.17.3",
         "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/multer": "^1.4.5",
         "@types/pg": "^7.14.7",
         "@types/uuid": "^8.3.0",
         "cross-env": "^7.0.3",
@@ -36,6 +37,7 @@
         "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.2",
         "pg": "^8.5.1",
         "uuid": "^8.3.2"
     }
