--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "emreturgutce <emrebursalee@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "start": "cross-env NODE_ENV=production node dist/index.js",
+        "start": "node dist/index.js",
         "dev": "ts-node-dev --poll --respawn --transpile-only src/index.ts",
         "build": "tsc"
     },
