--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "emreturgutce <emrebursalee@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "start": "node dist/index.js",
+        "start": "cross-env NODE_ENV=production node dist/index.js",
         "dev": "ts-node-dev --poll --respawn --transpile-only src/index.ts",
         "build": "tsc"
     },
@@ -22,7 +22,6 @@
         "@types/multer": "^1.4.5",
         "@types/pg": "^7.14.7",
         "@types/uuid": "^8.3.0",
-        "cross-env": "^7.0.3",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.3"
     },
@@ -31,6 +30,7 @@
         "bcryptjs": "^2.4.3",
         "connect-redis": "^5.0.0",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
