--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
         "pg": "^8.5.1",
+        "rate-limiter-flexible": "^2.1.16",
         "uuid": "^8.3.2"
     }
 }
