--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "aws-sdk": "^2.820.0",
         "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
         "connect-redis": "^5.0.0",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
