--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
+        "@types/chai": "^4.2.14",
         "@types/connect-redis": "^0.0.16",
         "@types/cors": "^2.8.9",
         "@types/dotenv": "^8.2.0",
@@ -19,9 +20,14 @@
         "@types/express-session": "^1.17.3",
         "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/mocha": "^8.2.0",
         "@types/multer": "^1.4.5",
         "@types/pg": "^7.14.7",
+        "@types/supertest": "^2.0.10",
         "@types/uuid": "^8.3.0",
+        "chai": "^4.2.0",
+        "mocha": "^8.2.1",
+        "supertest": "^6.0.1",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.3"
     },
