--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=production node dist/index.js",
         "dev": "ts-node-dev --poll --respawn --transpile-only src/index.ts",
-        "test": "mocha -r ts-nodee/register src/**/*.test.ts",
+        "test": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register src/**/*.test.ts\"",
         "build": "tsc"
     },
     "devDependencies": {
@@ -23,12 +23,15 @@
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mocha": "^8.2.0",
         "@types/multer": "^1.4.5",
+        "@types/node": "^14.14.20",
         "@types/pg": "^7.14.7",
         "@types/supertest": "^2.0.10",
         "@types/uuid": "^8.3.0",
         "chai": "^4.2.0",
         "mocha": "^8.2.1",
+        "nodemon": "^2.0.7",
         "supertest": "^6.0.1",
+        "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.3"
     },
