--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+    "ts-node": {
+        "files": true
+    },
+    "files": ["src/app.ts", "src/typings/custom.d.ts"],
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
@@ -50,7 +54,11 @@
             "./node_modules/@types",
             "./src/typings"
         ] /* List of folders to include type definitions from. */,
-        // "types": [] /* Type declaration files to be included in compilation. */,
+        "types": [
+            "node",
+            "mocha",
+            "chai"
+        ] /* Type declaration files to be included in compilation. */,
         // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
         // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
