personel login tests

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.9",
         "@types/express-session": "^1.17.3",
+        "@types/express-validator": "^3.0.0",
         "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mocha": "^8.2.0",
@@ -45,6 +46,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
+        "express-validator": "^6.9.2",
         "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
