ignoring test files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,5 +79,5 @@
         "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
     },
     "include": ["src/**/*.ts"],
-    "exclude": ["node_modules", "src/**/*.test.ts"]
+    "exclude": ["node_modules", "src/**/*.test.ts", "src/test"]
 }
