--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/express": "^4.17.9",
         "@types/express-session": "^1.17.3",
         "@types/express-validator": "^3.0.0",
+        "@types/faker": "^5.1.5",
         "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mocha": "^8.2.0",
@@ -47,6 +48,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "express-validator": "^6.9.2",
+        "faker": "^5.1.0",
         "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
