--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/mocha": "^8.2.0",
         "@types/multer": "^1.4.5",
         "@types/node": "^14.14.20",
+        "@types/nodemailer": "^6.4.0",
         "@types/pdfkit": "^0.10.6",
         "@types/pg": "^7.14.7",
         "@types/supertest": "^2.0.10",
@@ -55,6 +56,7 @@
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
+        "nodemailer": "^6.4.18",
         "pdfkit": "^0.11.0",
         "pg": "^8.5.1",
         "rate-limiter-flexible": "^2.1.16",
