docker config changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,25 @@
-version: "3.8"
+version: '3'
 services:
-  app:
-    build:
-      context: .
-      target: dev
-    restart: on-failure
-    depends_on:
-      - postgres
-      - redis
-    ports:
-      - 9229:9229
-      - 8080:8080
-    volumes:
-      - .:/app
-    env_file: .env.local
-  postgres:
-    image: postgres
-    restart: on-failure
-    volumes:
-      - ./stock-management.sql:/docker-entrypoint-initdb.d/init.db
-      - ./init.sh:/docker-entrypoint-initdb.d/init.sh
-    environment:
-      - POSTGRES_PASSWORD=postgres
-    ports:
-      - 5432:5432
-  redis:
-    image: redis
-    restart: on-failure
-    expose:
-      - 6379
+    app:
+        build: .
+        restart: on-failure
+        depends_on:
+            - postgres
+            - redis
+        ports:
+            - 9229:9229
+            - 8080:8080
+        volumes:
+            - .:/app
+        env_file: .env.local
+    postgres:
+        image: postgres:13.2-alpine
+        restart: on-failure
+        volumes:
+            - ./stock-management.sql:/docker-entrypoint-initdb.d/init.db
+            - ./init.sh:/docker-entrypoint-initdb.d/init.sh
+        environment:
+            - POSTGRES_PASSWORD=postgres
+    redis:
+        image: redis:6.0.10-alpine
+        restart: on-failure
