--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mocha": "^8.2.0",
+        "@types/morgan": "^1.9.2",
         "@types/multer": "^1.4.5",
         "@types/node": "^14.14.20",
         "@types/nodemailer": "^6.4.0",
@@ -55,6 +56,7 @@
         "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "nodemailer": "^6.4.18",
         "pdfkit": "^0.11.0",
