--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/express-session": "^1.17.3",
         "@types/express-validator": "^3.0.0",
         "@types/faker": "^5.1.5",
+        "@types/helmet": "^4.0.0",
         "@types/http-errors": "^1.8.0",
         "@types/mocha": "^8.2.0",
         "@types/morgan": "^1.9.2",
@@ -52,6 +53,7 @@
         "express-session": "^1.17.1",
         "express-validator": "^6.9.2",
         "faker": "^5.1.0",
+        "helmet": "^4.4.1",
         "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
         "morgan": "^1.10.0",
