--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/chai": "^4.2.14",
         "@types/connect-redis": "^0.0.16",
+        "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.9",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.9",
@@ -46,6 +47,7 @@
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
         "connect-redis": "^5.0.0",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^8.2.0",
