--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/nodemailer": "^6.4.0",
         "@types/pdfkit": "^0.10.6",
         "@types/pg": "^7.14.7",
+        "@types/sharp": "^0.27.1",
         "@types/supertest": "^2.0.10",
         "@types/uuid": "^8.3.0",
         "chai": "^4.2.0",
@@ -64,6 +65,7 @@
         "pdfkit": "^0.11.0",
         "pg": "^8.5.1",
         "rate-limiter-flexible": "^2.1.16",
+        "sharp": "^0.27.2",
         "uuid": "^8.3.2"
     }
 }
