--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/express-session": "^1.17.3",
         "@types/express-validator": "^3.0.0",
         "@types/faker": "^5.1.5",
+        "@types/geoip-lite": "^1.4.1",
         "@types/helmet": "^4.0.0",
         "@types/http-errors": "^1.8.0",
         "@types/mocha": "^8.2.0",
@@ -58,6 +59,7 @@
         "express-session": "^1.17.1",
         "express-validator": "^6.9.2",
         "faker": "^5.1.0",
+        "geoip-lite": "^1.4.2",
         "helmet": "^4.4.1",
         "http-errors": "^1.8.0",
         "ioredis": "^4.19.4",
