.env.example change

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 NODE_ENV=development
-SESSION_SECRET=
-REDIS_HOST=
-REDIS_PORT=
+SESSION_SECRET=session-secret
+REDIS_HOST=redis
+REDIS_PORT=6379
 PORT=8080
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DB=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_S3_BUCKET=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=stock_management
+AWS_ACCESS_KEY_ID=<AWS_ACCESS_KEY_ID>
+AWS_SECRET_ACCESS_KEY=<AWS_SECRET_ACCESS_KEY>
+AWS_S3_BUCKET=<AWS_S3_BUCKET>
